--- a/blocks/_page/index.css
+++ b/blocks/_page/index.css
@@ -6,4 +6,12 @@ body {
   background-color: #fff;
   font-family: Tahoma;
   line-height: 1.2;
+  min-height:100vh;
+  margin:0;
+  padding:0;
+}
+
+main {
+  flex-grow: 1;
+  flex-shrink: 1;
 }
