--- a/testsite/blocks/prices/index.css
+++ b/testsite/blocks/prices/index.css
@@ -1,16 +1,43 @@
 .prices {
-  margin-top:226px;
-  margin-bottom:92px;
+  padding:155px 0 75px;
+}
+
+.prices_content {
+  width:1128px;
+  list-style:none;
+  padding:0;
+  display:flex;
+  flex-direction: row;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  margin:0 auto;
+
+}
+
+.prices_h2 {
+  font-size: 35px;
+  font-weight: normal;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: normal;
+  letter-spacing: normal;
+  color: #0c454f;
+  margin-bottom:20px;
+}
+
+.prices_h2_center {
+    text-align:center;
 }
 
 .prices_table {
   text-align:center;
   border-collapse:collapse;
   width:100%;
+  margin-bottom:45px;
 }
 
 .prices_table th {
-  font-size:35px;
+  font-size:25px;
   padding:20px 0 42px 0;
   font-weight: normal;
 }
@@ -102,54 +129,45 @@
   background: #000;
 }
 
-.price_buttons {
+.prices_buttons {
   display:flex;
   flex-direction: row;
-  margin-top: 18px;
-  justify-content: flex-end;
+  justify-content: center;
+  width:100%;
 }
 
-.price_button {
+.prices_text_button {
   display:inline-block;
-  width: 200px;
-  height: 40px;
-  border-radius: 40px;
+  width: 350px;
+  height: 50px;
+  border-radius: 30px;
   background-color: #0074eb;
   box-shadow: 0 17px 50px 0 #75aef0;
   color:#fff;
-  text-decoration:none;
-  font-size:16px;
-  line-height:40px;
-  box-sizing:border-box;
-  margin-left:90px;
+  font-size: 18px;
+  font-weight: bold;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: 50px;
+  letter-spacing: normal;
   text-align: center;
+  cursor:pointer;
+  text-decoration:none;
   transition:box-shadow 0.3s, background-color 0.3s;
+  margin-top:25px;
+
 }
 
-.price_button:hover {
+.prices_text_button:hover {
   box-shadow: 0 9px 25px 0 #75aef0;
   background-color: #0090fb;
 }
 
-.price_button:active {
-box-shadow: 0 0 0 0 #75aef0;
-background-color: #0090fb;
+.prices_text_button:active {
+  box-shadow: 0 0 0 0 #75aef0;
+  background-color: #0090fb;
 }
 
-
-.price_button.white {
-  box-shadow: 0 17px 50px 0 #eee;
-  color:#0074eb;
-  border:1px solid #0074eb;
-  background-color: #ffffff;
-}
-
-.price_button.white:hover {
-  box-shadow: 0 9px 25px 0 #eee;
-  background-color: #eeeeee;
-}
-
-.price_button.white:active {
-  box-shadow: 0 0 0 0 #eee;
-  background-color: #eeeeee;
+.prices_strong {
+  color:#0c454f;
 }
