--- a/testsite/blocks/header/index.css
+++ b/testsite/blocks/header/index.css
@@ -49,7 +49,7 @@ header {
   xheight:38px;
   width:200px;
   height:84px;
-  background:url(afb/sa_logo.png) center center no-repeat;
+  background:url(afb/sa_logo_white.png) center center no-repeat;
 }
 
 
