--- a/arm_seller/blocks/header/index.css
+++ b/arm_seller/blocks/header/index.css
@@ -1,3 +1,15 @@
+@font-face {
+  font-family: 'social';
+  src: url('afb/social.eot?5467251');
+  src: url('afb/social.eot?5467251#iefix') format('embedded-opentype'),
+       url('afb/social.woff2?5467251') format('woff2'),
+       url('afb/social.woff?5467251') format('woff'),
+       url('afb/social.ttf?5467251') format('truetype'),
+       url('afb/social.svg?5467251#social') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+
 header {
   display:block;
   background:#0074eb;
@@ -62,6 +74,23 @@ header {
   height:89px;
 }
 
+.header_social {
+  list-style: none;
+  margin:0;
+  padding:0;
+  display:flex;
+  flex-grow: 0;
+  flex-direction: row;
+  justify-content: flex-end;
+  align-items: flex-end;
+  line-height:1em;
+}
+
+.header_social_item {
+  margin-left:10px;
+  cursor:pointer;
+}
+
 .header_menu_item,
 .header_phone {
   font-size: 18px;
@@ -71,6 +100,11 @@ header {
   text-align:right;
   text-decoration:none;
   color:#fff;
+  display:block;
+}
+
+.header_phone {
+  margin-left:20px;
 }
 
 .header_phone_note {
@@ -203,15 +237,44 @@ header.menu {
   z-index:1000;
   height:155px;
   overflow:hidden;
-  background-color:rgba(256,256,256,0.8);
 }
-
+/*
+background-color:rgba(256,256,256,0.8);
 header.menu .header_menu_item,
+header.menu .header_social_item,
 header.menu .header_phone {
   color:#0c454f;
-}
+} */
 
-
-.menu .header_proj_logo {
+/* .menu .header_proj_logo {
   background-image:url(afb/sa_logo.png);
+} */
+
+[class^="icon-"]:before, [class*=" icon-"]:before {
+ font-family: "social";
+ font-style: normal;
+ font-weight: normal;
+ speak: none;
+
+ display: inline-block;
+ text-decoration: inherit;
+ width: 1em;
+ margin-right: .2em;
+ text-align: center;
+ /* opacity: .8; */
+
+ font-variant: normal;
+ text-transform: none;
+
+ line-height: 1em;
+
+ margin-left: .02em;
+
+ -webkit-font-smoothing: antialiased;
+ -moz-osx-font-smoothing: grayscale;
 }
+
+.icon-vkontakte-rect:before { content: '\e800';font-size:80%;transform:translateY(-1px);}
+.icon-facebook-rect:before { content: '\e801';}
+.icon-odnoklassniki-rect:before { content: '\f264';font-size:95%;}
+.icon-twitter-rect:before { content: '\f314'; }
